--- a/api-clients/package.json
+++ b/api-clients/package.json
@@ -17,10 +17,14 @@
     "typescript": "*"
   },
   "dependencies": {
+    "@prisma/client": "^5.12.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.1",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "prisma": "^5.12.0",
+    "reflect-metadata": "^0.2.2",
+    "typedi": "^0.10.0"
   }
 }
