[add]: Implementación de Prisma y nuevas estructuras

--- a/api-clients/environment/.env.example
+++ b/api-clients/environment/.env.example
@@ -7,3 +7,6 @@ BCRYPT_SALT=10
 # JSON Web Token
 JWT_SECRET=secret
 JWT_EXPIRATION_TIME=24h
+
+# Databases
+DATABASE_URL=postgresql://USER:PASSWORD@HOST:PORT/DATABASE
